--- a/GAME SET/css/reset.css
+++ b/GAME SET/css/reset.css
@@ -3,6 +3,16 @@ body {
   margin: 0;
 }
 
+.intro {
+  position: fixed;
+  z-index: 20;
+  background: rgba(55, 38, 38, 0.9);
+  margin-top: 0;
+  margin-left: 30px;
+  width: 60vw;
+  height: 90vh;
+  opacity: 50%;
+}
 .container1 {
   margin-top: 5%;
   background-color: #fff;
@@ -17,6 +27,14 @@ body {
   max-width: 100%;
   max-height: 100%;
   padding: 5px;
+  opacity: 1;
+}
+
+.card:hover {
+  opacity: 0.5;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
 }
 
 .board-game {
@@ -34,8 +52,11 @@ body {
 .col-md-4 {
   background-color: #666;
   height: 100vh;
+  padding: 10px 50px 10px 50px;
 }
 
 .col-md-2 {
   background-color: #fff;
 }
+
+img { cursor: pointer; };
