--- a/GAME SET/css/reset.css
+++ b/GAME SET/css/reset.css
@@ -14,7 +14,7 @@ body {
   opacity: 50%;
 }
 .container1 {
-  margin-top: 5%;
+  margin-top: 0;
   background-color: #fff;
 }
 
@@ -60,3 +60,9 @@ body {
 }
 
 img { cursor: pointer; };
+
+ol, ul {
+  margin-left: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
